add api for greenhouse stats
